# parsley

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  index.css  index.html  www-11b86b13b01979de.js  www-11b86b13b01979de_bg.wasm  www.js  www.wasm
.github/: README.md
.github/workflows/: rust.yml
benches/: macro-slice-vec.rs  num-type-vs-raw.rs
examples/npm/: Cargo.toml  README.md
examples/npm/src/: lib.rs
examples/www/: Cargo.toml  Trunk.toml  index.html
examples/www/src/app/: footer.rs  header.rs  mod.rs
src/: cont.rs  env.rs  errors.rs  lib.rs  main.rs  repl.rs  utils.rs
src/cont/: mod.rs
src/context/: math.rs  mod.rs  utils.rs
src/context/base/: mod.rs  tests.rs  vec.rs
src/context/core/: mod.rs  tests.rs
src/ctx/: math.rs  mod.rs  write.rs
src/ctx/base/: mod.rs  tests.rs  vec.rs
src/ctx/core/: mod.rs  tests.rs
src/lisp/: as_atom.rs  context.rs  errors.rs  mod.rs  primitives.rs  sexp.rs  tests.rs  utils.rs
src/lisp/context/: base.rs  math.rs  mod.rs  utils.rs  write.rs
src/lisp/context/base/: mod.rs  tests.rs  vec.rs
src/lisp/primitives/: eq.rs  from.rs  mod.rs
src/lisp/sexp/: display.rs  eval.rs  from.rs  iter.rs  mod.rs  parse.rs
src/lisp/sexp/eval/: helpers.rs  mod.rs  tests.rs
src/lisp/sexp/parse/: mod.rs  tests.rs
src/primitives/: from.rs  mod.rs  num.rs  proc.rs
src/proc/: mod.rs  utils.rs
src/sexp/: display.rs  eval.rs  from.rs  iter.rs  mod.rs
src/sexp/eval/: helpers.rs  mod.rs  tests.rs
src/sexp/parse/: mod.rs  tests.rs
tests/: sicp_ch1.rs  sicp_ch2.rs
tests/fizzbuzz/: fizzbuzz.ss  main.rs
tests/gnu-doc/: begin_1.ss  begin_2.ss  case_1.ss  case_2.ss  case_3.ss  cond_1.ss  cond_2.ss  define.ss  define_letrec.ss  do_1.ss  do_2.ss  eqv.ss  if.ss  lambda.ss  let*.ss  let.ss  letrec.ss  main.rs  named-let.ss
tests/sicp/ch1/: ex_11_iter.ss  ex_11_rec.ss  ex_3.ss  ex_5.ss
tests/sicp/ch2/: ex_1.ss  ex_2.ss  ex_3.ss
www/: Cargo.toml  README.md
www/src/: app.rs  body.rs  footer.rs  main.rs
www/src/app/: mod.rs
www/src/app/body/: terminal.rs
www/src/body/: mod.rs  terminal.rs
www/src/static/: index.css  index.html
(+2 files in other folders)
