[package]
name = "parsley"
version = "0.6.1"
authors = ["George Kaplan <george@georgekaplan.xyz>"]
edition = "2018"
description = "An implementation of Scheme"
readme = "./README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/g-s-k/parsley"

[lib]
name = "parsley"
path = "src/lib.rs"

# only required for the cli binary, not for WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "3.0"
structopt = "0.2"
