[package]
name = "parsley"
version = "0.9.0"
authors = ["George Kaplan <george@georgekaplan.xyz>"]
edition = "2018"
description = "An implementation of Scheme"
readme = "./README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/g-s-k/parsley"

[lib]
name = "parsley"
path = "src/lib.rs"

[workspace]
members = [ "examples/npm", "examples/www" ]

# only required for the cli binary, not for WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "6.2.0"
structopt = "0.2"

[dev-dependencies]
pretty_assertions = "0.5.1"
